# ipysketch_lite

./: .gitignore  DEVELOP.md  README.md  build.sh  example.ipynb  index.html  install.json  ipysketch.py  nn_example.ipynb  package.json  pyproject.toml  setup-purepy.py  setup.py  sketch.html  template.html
.github/workflows/: deploy.yml  pure-python-publish.yml  python-publish.yml
docs/: DEVELOP.md  api.rst  conf.py  index.rst  ipysketch_lite.rst  makedocs.sh
docs/_static/: custom.css  sketch.html
docs/_templates/: custom-sidebar.html
examples/: annotated_sketch_example.ipynb  custom_sketch.ipynb  example.ipynb  lite_example.ipynb  message.txt  nn_example.ipynb  sketch_annotation_example.ipynb  vector_sketch.ipynb
frontend_src/: docs_addon.html  sketch.css  sketch.html  sketch.js
ipysketch_lite/: __init__.py  _template.py  annotator_sketch.py  polling_sketch.py  sketch.js  sketch.py  sketchpad.py  template.py  vector_sketch.js
ipysketch_lite/_legacy/: __init__.py
repl/: jupyter-lite.json
src/: index.ts
