[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ipysketch"
version = "0.0.1"
description="simple sketching tool for jupyter notebooks"
authors = [
    {name = "Matthew Taylor", email = "matthew.taylor.andre@gmail.com"},
]

[project.readme]
file = "README.md"
content-type = "text/markdown"